# v2-uri-parser

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-build.sh
src/: main.rs
src/config_models/: mod.rs
src/lib/: inboundGenerator.rs  mod.rs
src/parser/: mod.rs  structs.rs  uri_identifier.rs  vless.rs
src/parser/config_models/: mod.rs
src/parser/shadow_socks/: data.rs  mod.rs  models.rs
src/parser/socks/: data.rs  mod.rs  models.rs
src/parser/trojan/: data.rs  mod.rs  models.rs
src/parser/vless/: data.rs  mod.rs  models.rs
src/parser/vmess/: data.rs  mod.rs  models.rs
src/utils/: inbound_generator.rs  mod.rs
